[tool.poetry]
name = "33888"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [
    { include = "**/*.py" },
]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "~3.13.0"

boto3 = "1.35.75"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0"
poetry-plugin-lambda-build = ">=1.0.7"

[tool.poetry-plugin-lambda-build]
package-artifact-path = "lambda_function.zip"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
